src/it/cnr/istc/oratio/core/parser/oRatioParser.java
package it.cnr.istc.oratio.core.parser;

import java.util.List;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.*;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class oRatioParser extends Parser {

    static {
        RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION);
    }
    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache
            = new PredictionContextCache();
    public static final int TYPE_DEF = 1, REAL = 2, BOOL = 3, STRING = 4, ENUM = 5, CLASS = 6, GOAL = 7, FACT = 8,
            PREDICATE = 9, NEW = 10, OR = 11, THIS = 12, VOID = 13, TRUE = 14, FALSE = 15, RETURN = 16,
            DOT = 17, COMMA = 18, COLON = 19, SEMICOLON = 20, LPAREN = 21, RPAREN = 22, LBRACKET = 23,
            RBRACKET = 24, LBRACE = 25, RBRACE = 26, PLUS = 27, MINUS = 28, STAR = 29, SLASH = 30,
            AMP = 31, BAR = 32, EQUAL = 33, GT = 34, LT = 35, BANG = 36, EQEQ = 37, LTEQ = 38, GTEQ = 39,
            BANGEQ = 40, IMPLICATION = 41, CARET = 42, ID = 43, NumericLiteral = 44, StringLiteral = 45,
            LINE_COMMENT = 46, COMMENT = 47, WS = 48;
    public static final int RULE_compilation_unit = 0, RULE_type_declaration = 1, RULE_typedef_declaration = 2,
            RULE_enum_declaration = 3, RULE_enum_constants = 4, RULE_class_declaration = 5,
            RULE_member = 6, RULE_field_declaration = 7, RULE_variable_dec = 8, RULE_method_declaration = 9,
            RULE_constructor_declaration = 10, RULE_initializer_element = 11, RULE_predicate_declaration = 12,
            RULE_statement = 13, RULE_block = 14, RULE_assignment_statement = 15,
            RULE_local_variable_statement = 16, RULE_expression_statement = 17, RULE_disjunction_statement = 18,
            RULE_conjunction = 19, RULE_formula_statement = 20, RULE_return_statement = 21,
            RULE_assignment_list = 22, RULE_assignment = 23, RULE_expr = 24, RULE_expr_list = 25,
            RULE_literal = 26, RULE_qualified_id = 27, RULE_type = 28, RULE_class_type = 29,
            RULE_primitive_type = 30, RULE_type_list = 31, RULE_typed_list = 32;
    public static final String[] ruleNames = {
        "compilation_unit", "type_declaration", "typedef_declaration", "enum_declaration",
        "enum_constants", "class_declaration", "member", "field_declaration",
        "variable_dec", "method_declaration", "constructor_declaration", "initializer_element",
        "predicate_declaration", "statement", "block", "assignment_statement",
        "local_variable_statement", "expression_statement", "disjunction_statement",
        "conjunction", "formula_statement", "return_statement", "assignment_list",
        "assignment", "expr", "expr_list", "literal", "qualified_id", "type",
        "class_type", "primitive_type", "type_list", "typed_list"
    };
    private static final String[] _LITERAL_NAMES = {
        null, "'typedef'", "'real'", "'bool'", "'string'", "'enum'", "'class'",
        "'goal'", "'fact'", "'predicate'", "'new'", "'or'", "'this'", "'void'",
        "'true'", "'false'", "'return'", "'.'", "','", "':'", "';'", "'('", "')'",
        "'['", "']'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "'&'", "'|'",
        "'='", "'>'", "'<'", "'!'", "'=='", "'<='", "'>='", "'!='", "'->'", "'^'"
    };
    private static final String[] _SYMBOLIC_NAMES = {
        null, "TYPE_DEF", "REAL", "BOOL", "STRING", "ENUM", "CLASS", "GOAL", "FACT",
        "PREDICATE", "NEW", "OR", "THIS", "VOID", "TRUE", "FALSE", "RETURN", "DOT",
        "COMMA", "COLON", "SEMICOLON", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET",
        "LBRACE", "RBRACE", "PLUS", "MINUS", "STAR", "SLASH", "AMP", "BAR", "EQUAL",
        "GT", "LT", "BANG", "EQEQ", "LTEQ", "GTEQ", "BANGEQ", "IMPLICATION", "CARET",
        "ID", "NumericLiteral", "StringLiteral", "LINE_COMMENT", "COMMENT", "WS"
    };
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);
    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override
    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "oRatio.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public oRatioParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    public static class Compilation_unitContext extends ParserRuleContext {

        public TerminalNode EOF() {
            return getToken(oRatioParser.EOF, 0);
        }

        public List<Type_declarationContext> type_declaration() {
            return getRuleContexts(Type_declarationContext.class);
        }

        public Type_declarationContext type_declaration(int i) {
            return getRuleContext(Type_declarationContext.class, i);
        }

        public List<Method_declarationContext> method_declaration() {
            return getRuleContexts(Method_declarationContext.class);
        }

        public Method_declarationContext method_declaration(int i) {
            return getRuleContext(Method_declarationContext.class, i);
        }

        public List<Predicate_declarationContext> predicate_declaration() {
            return getRuleContexts(Predicate_declarationContext.class);
        }

        public Predicate_declarationContext predicate_declaration(int i) {
            return getRuleContext(Predicate_declarationContext.class, i);
        }

        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }

        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class, i);
        }

        public Compilation_unitContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_compilation_unit;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).enterCompilation_unit(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).exitCompilation_unit(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof oRatioVisitor) {
                return ((oRatioVisitor<? extends T>) visitor).visitCompilation_unit(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final Compilation_unitContext compilation_unit() throws RecognitionException {
        Compilation_unitContext _localctx = new Compilation_unitContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_compilation_unit);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(72);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPE_DEF) | (1L << REAL) | (1L << BOOL) | (1L << STRING) | (1L << ENUM) | (1L << CLASS) | (1L << GOAL) | (1L << FACT) | (1L << PREDICATE) | (1L << NEW) | (1L << THIS) | (1L << VOID) | (1L << TRUE) | (1L << FALSE) | (1L << RETURN) | (1L << LPAREN) | (1L << LBRACKET) | (1L << LBRACE) | (1L << PLUS) | (1L << MINUS) | (1L << BANG) | (1L << ID) | (1L << NumericLiteral) | (1L << StringLiteral))) != 0)) {
                    {
                        setState(70);
                        _errHandler.sync(this);
                        switch (getInterpreter().adaptivePredict(_input, 0, _ctx)) {
                            case 1: {
                                setState(66);
                                type_declaration();
                            }
                            break;
                            case 2: {
                                setState(67);
                                method_declaration();
                            }
                            break;
                            case 3: {
                                setState(68);
                                predicate_declaration();
                            }
                            break;
                            case 4: {
                                setState(69);
                                statement();
                            }
                            break;
                        }
                    }
                    setState(74);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(75);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Type_declarationContext extends ParserRuleContext {

        public Typedef_declarationContext typedef_declaration() {
            return getRuleContext(Typedef_declarationContext.class, 0);
        }

        public Enum_declarationContext enum_declaration() {
            return getRuleContext(Enum_declarationContext.class, 0);
        }

        public Class_declarationContext class_declaration() {
            return getRuleContext(Class_declarationContext.class, 0);
        }

        public Type_declarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_type_declaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).enterType_declaration(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).exitType_declaration(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof oRatioVisitor) {
                return ((oRatioVisitor<? extends T>) visitor).visitType_declaration(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final Type_declarationContext type_declaration() throws RecognitionException {
        Type_declarationContext _localctx = new Type_declarationContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_type_declaration);
        try {
            setState(80);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case TYPE_DEF:
                    enterOuterAlt(_localctx, 1);
                     {
                        setState(77);
                        typedef_declaration();
                    }
                    break;
                case ENUM:
                    enterOuterAlt(_localctx, 2);
                     {
                        setState(78);
                        enum_declaration();
                    }
                    break;
                case CLASS:
                    enterOuterAlt(_localctx, 3);
                     {
                        setState(79);
                        class_declaration();
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Typedef_declarationContext extends ParserRuleContext {

        public Token name;

        public Primitive_typeContext primitive_type() {
            return getRuleContext(Primitive_typeContext.class, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public TerminalNode ID() {
            return getToken(oRatioParser.ID, 0);
        }

        public Typedef_declarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_typedef_declaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).enterTypedef_declaration(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).exitTypedef_declaration(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof oRatioVisitor) {
                return ((oRatioVisitor<? extends T>) visitor).visitTypedef_declaration(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final Typedef_declarationContext typedef_declaration() throws RecognitionException {
        Typedef_declarationContext _localctx = new Typedef_declarationContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_typedef_declaration);
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(82);
                match(TYPE_DEF);
                setState(83);
                primitive_type();
                setState(84);
                expr(0);
                setState(85);
                _localctx.name = match(ID);
                setState(86);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Enum_declarationContext extends ParserRuleContext {

        public Token name;

        public List<Enum_constantsContext> enum_constants() {
            return getRuleContexts(Enum_constantsContext.class);
        }

        public Enum_constantsContext enum_constants(int i) {
            return getRuleContext(Enum_constantsContext.class, i);
        }

        public TerminalNode ID() {
            return getToken(oRatioParser.ID, 0);
        }

        public Enum_declarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_enum_declaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).enterEnum_declaration(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).exitEnum_declaration(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof oRatioVisitor) {
                return ((oRatioVisitor<? extends T>) visitor).visitEnum_declaration(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final Enum_declarationContext enum_declaration() throws RecognitionException {
        Enum_declarationContext _localctx = new Enum_declarationContext(_ctx, getState());
        enterRule(_localctx, 6, RULE_enum_declaration);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(88);
                match(ENUM);
                setState(89);
                _localctx.name = match(ID);
                setState(90);
                enum_constants();
                setState(95);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == BAR) {
                    {
                        {
                            setState(91);
                            match(BAR);
                            setState(92);
                            enum_constants();
                        }
                    }
                    setState(97);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(98);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Enum_constantsContext extends ParserRuleContext {

        public List<TerminalNode> StringLiteral() {
            return getTokens(oRatioParser.StringLiteral);
        }

        public TerminalNode StringLiteral(int i) {
            return getToken(oRatioParser.StringLiteral, i);
        }

        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public Enum_constantsContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_enum_constants;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).enterEnum_constants(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).exitEnum_constants(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof oRatioVisitor) {
                return ((oRatioVisitor<? extends T>) visitor).visitEnum_constants(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final Enum_constantsContext enum_constants() throws RecognitionException {
        Enum_constantsContext _localctx = new Enum_constantsContext(_ctx, getState());
        enterRule(_localctx, 8, RULE_enum_constants);
        int _la;
        try {
            setState(111);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case LBRACE:
                    enterOuterAlt(_localctx, 1);
                     {
                        setState(100);
                        match(LBRACE);
                        setState(101);
                        match(StringLiteral);
                        setState(106);
                        _errHandler.sync(this);
                        _la = _input.LA(1);
                        while (_la == COMMA) {
                            {
                                {
                                    setState(102);
                                    match(COMMA);
                                    setState(103);
                                    match(StringLiteral);
                                }
                            }
                            setState(108);
                            _errHandler.sync(this);
                            _la = _input.LA(1);
                        }
                        setState(109);
                        match(RBRACE);
                    }
                    break;
                case REAL:
                case BOOL:
                case STRING:
                case ID:
                    enterOuterAlt(_localctx, 2);
                     {
                        setState(110);
                        type();
                    }
                    break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Class_declarationContext extends ParserRuleContext {

        public Token name;

        public TerminalNode ID() {
            return getToken(oRatioParser.ID, 0);
        }

        public Type_listContext type_list() {
            return getRuleContext(Type_listContext.class, 0);
        }

        public List<MemberContext> member() {
            return getRuleContexts(MemberContext.class);
        }

        public MemberContext member(int i) {
            return getRuleContext(MemberContext.class, i);
        }

        public Class_declarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_class_declaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).enterClass_declaration(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).exitClass_declaration(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof oRatioVisitor) {
                return ((oRatioVisitor<? extends T>) visitor).visitClass_declaration(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final Class_declarationContext class_declaration() throws RecognitionException {
        Class_declarationContext _localctx = new Class_declarationContext(_ctx, getState());
        enterRule(_localctx, 10, RULE_class_declaration);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(113);
                match(CLASS);
                setState(114);
                _localctx.name = match(ID);
                setState(117);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == COLON) {
                    {
                        setState(115);
                        match(COLON);
                        setState(116);
                        type_list();
                    }
                }

                setState(119);
                match(LBRACE);
                setState(123);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPE_DEF) | (1L << REAL) | (1L << BOOL) | (1L << STRING) | (1L << ENUM) | (1L << CLASS) | (1L << PREDICATE) | (1L << VOID) | (1L << ID))) != 0)) {
                    {
                        {
                            setState(120);
                            member();
                        }
                    }
                    setState(125);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(126);
                match(RBRACE);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class MemberContext extends ParserRuleContext {

        public Field_declarationContext field_declaration() {
            return getRuleContext(Field_declarationContext.class, 0);
        }

        public Method_declarationContext method_declaration() {
            return getRuleContext(Method_declarationContext.class, 0);
        }

        public Constructor_declarationContext constructor_declaration() {
            return getRuleContext(Constructor_declarationContext.class, 0);
        }

        public Predicate_declarationContext predicate_declaration() {
            return getRuleContext(Predicate_declarationContext.class, 0);
        }

        public Type_declarationContext type_declaration() {
            return getRuleContext(Type_declarationContext.class, 0);
        }

        public MemberContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_member;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).enterMember(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).exitMember(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof oRatioVisitor) {
                return ((oRatioVisitor<? extends T>) visitor).visitMember(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final MemberContext member() throws RecognitionException {
        MemberContext _localctx = new MemberContext(_ctx, getState());
        enterRule(_localctx, 12, RULE_member);
        try {
            setState(133);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                     {
                        setState(128);
                        field_declaration();
                    }
                    break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                     {
                        setState(129);
                        method_declaration();
                    }
                    break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                     {
                        setState(130);
                        constructor_declaration();
                    }
                    break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                     {
                        setState(131);
                        predicate_declaration();
                    }
                    break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                     {
                        setState(132);
                        type_declaration();
                    }
                    break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Field_declarationContext extends ParserRuleContext {

        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public List<Variable_decContext> variable_dec() {
            return getRuleContexts(Variable_decContext.class);
        }

        public Variable_decContext variable_dec(int i) {
            return getRuleContext(Variable_decContext.class, i);
        }

        public Field_declarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_field_declaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).enterField_declaration(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).exitField_declaration(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof oRatioVisitor) {
                return ((oRatioVisitor<? extends T>) visitor).visitField_declaration(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final Field_declarationContext field_declaration() throws RecognitionException {
        Field_declarationContext _localctx = new Field_declarationContext(_ctx, getState());
        enterRule(_localctx, 14, RULE_field_declaration);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(135);
                type();
                setState(136);
                variable_dec();
                setState(141);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while (_la == COMMA) {
                    {
                        {
                            setState(137);
                            match(COMMA);
                            setState(138);
                            variable_dec();
                        }
                    }
                    setState(143);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(144);
                match(SEMICOLON);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Variable_decContext extends ParserRuleContext {

        public Token name;

        public TerminalNode ID() {
            return getToken(oRatioParser.ID, 0);
        }

        public ExprContext expr() {
            return getRuleContext(ExprContext.class, 0);
        }

        public Variable_decContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_variable_dec;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).enterVariable_dec(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).exitVariable_dec(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof oRatioVisitor) {
                return ((oRatioVisitor<? extends T>) visitor).visitVariable_dec(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public final Variable_decContext variable_dec() throws RecognitionException {
        Variable_decContext _localctx = new Variable_decContext(_ctx, getState());
        enterRule(_localctx, 16, RULE_variable_dec);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(146);
                _localctx.name = match(ID);
                setState(149);
                _errHandler.sync(this);
                _la = _input.LA(1);
                if (_la == EQUAL) {
                    {
                        setState(147);
                        match(EQUAL);
                        setState(148);
                        expr(0);
                    }
                }

            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    public static class Method_declarationContext extends ParserRuleContext {

        public Method_declarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_method_declaration;
        }

        public Method_declarationContext() {
        }

        public void copyFrom(Method_declarationContext ctx) {
            super.copyFrom(ctx);
        }
    }

    public static class Void_method_declarationContext extends Method_declarationContext {

        public Token name;

        public BlockContext block() {
            return getRuleContext(BlockContext.class, 0);
        }

        public TerminalNode ID() {
            return getToken(oRatioParser.ID, 0);
        }

        public Typed_listContext typed_list() {
            return getRuleContext(Typed_listContext.class, 0);
        }

        public Void_method_declarationContext(Method_declarationContext ctx) {
            copyFrom(ctx);
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).enterVoid_method_declaration(this);
            }
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof oRatioListener) {
                ((oRatioListener) listener).exitVoid_method_declaration(this);
            }
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof oRatioVisitor) {
                return ((oRatioVisitor<? extends T>) visitor).visitVoid_method_declaration(this);
            } else {
                return visitor.visitChildren(this);
            }
        }
    }

    public static class Type_method_declarationContext extends Method_declarationContext {

        public Token name;

        public TypeContext type() {
            return getRuleContext(TypeContext.class, 0);
        }

        public BlockContext block() {
            return getRuleContext(BlockContext.class, 0);
        }

        public TerminalNode ID() {
            return getToken(oRatioParser.ID, 0);
        }

        public Typed_listContext typed_list() {
